y.output
Terminals unused in grammar

   T_Uint
   T_Struct
   T_Bvec2
   T_Bvec3
   T_Bvec4
   T_Ivec2
   T_Ivec3
   T_Ivec4
   T_Uvec2
   T_Uvec3
   T_Uvec4
   T_Do
   T_In
   T_Out
   T_Inout
   T_Const
   T_Uniform
   T_Layout
   T_LeftBracket
   T_RightBracket
   LOWEST
   T_NeqOP


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: Declaration
    5     | FuncDecl CompoundStatement

    6 Declaration: FuncDecl T_Semicolon
    7            | SingleDecl T_Semicolon

    8 FuncDecl: TypeDecl T_Identifier T_LeftParen T_RightParen
    9         | TypeDecl T_Identifier T_LeftParen ParameterList T_RightParen

   10 ParameterList: SingleDecl
   11              | ParameterList T_Comma SingleDecl

   12 SingleDecl: TypeDecl T_Identifier
   13           | TypeDecl T_Identifier T_Equal Initializer

   14 Initializer: T_FloatConstant

   15 TypeDecl: T_Int
   16         | T_Void
   17         | T_Float
   18         | T_Bool
   19         | T_Vec2
   20         | T_Vec3
   21         | T_Vec4
   22         | T_Mat2
   23         | T_Mat3
   24         | T_Mat4

   25 CompoundStatement: T_LeftBrace T_RightBrace
   26                  | T_LeftBrace StatementList T_RightBrace

   27 StatementList: Statement
   28              | StatementList Statement

   29 Statement: CompoundStatement
   30          | SingleStatement

   31 SingleStatement: T_Semicolon
   32                | SingleDecl T_Semicolon
   33                | Expression T_Semicolon
   34                | SelectionStmt
   35                | SwitchStmt
   36                | CaseStmt
   37                | JumpStmt
   38                | WhileStmt
   39                | ForStmt

   40 SelectionStmt: T_If T_LeftParen Expression T_RightParen Statement T_Else Statement
   41              | T_If T_LeftParen Expression T_RightParen Statement

   42 SwitchStmt: T_Switch T_LeftParen Expression T_RightParen T_LeftBrace StatementList T_RightBrace

   43 CaseStmt: T_Case Expression T_Colon Statement
   44         | T_Default T_Colon Statement

   45 JumpStmt: T_Break T_Semicolon
   46         | T_Continue T_Semicolon
   47         | T_Return T_Semicolon
   48         | T_Return Expression T_Semicolon

   49 WhileStmt: T_While T_LeftParen Expression T_RightParen Statement

   50 ForStmt: T_For T_LeftParen Expression T_Semicolon Expression T_Semicolon Expression T_RightParen Statement

   51 PrimaryExpr: T_Identifier
   52            | T_IntConstant
   53            | T_FloatConstant
   54            | T_BoolConstant
   55            | T_LeftParen Expression T_RightParen

   56 PostfixExpr: PrimaryExpr
   57            | PostfixExpr T_Inc
   58            | PostfixExpr T_Dec
   59            | PostfixExpr T_Dot T_FieldSelection

   60 UnaryExpr: PostfixExpr
   61          | T_Inc UnaryExpr
   62          | T_Dec UnaryExpr
   63          | T_Plus UnaryExpr
   64          | T_Dash UnaryExpr

   65 MultiExpr: UnaryExpr
   66          | MultiExpr T_Star UnaryExpr
   67          | MultiExpr T_Slash UnaryExpr

   68 AdditionExpr: MultiExpr
   69             | AdditionExpr T_Plus MultiExpr
   70             | AdditionExpr T_Dash MultiExpr

   71 RelationExpr: AdditionExpr
   72             | RelationExpr T_LeftAngle AdditionExpr
   73             | RelationExpr T_RightAngle AdditionExpr
   74             | RelationExpr T_GreaterEqual AdditionExpr
   75             | RelationExpr T_LessEqual AdditionExpr

   76 EqualityExpr: RelationExpr
   77             | EqualityExpr T_EqOp RelationExpr
   78             | EqualityExpr T_NeqOp RelationExpr

   79 LogicAndExpr: EqualityExpr
   80             | LogicAndExpr T_And EqualityExpr

   81 LogicOrExpr: LogicAndExpr
   82            | LogicOrExpr T_Or LogicAndExpr

   83 Expression: LogicOrExpr
   84           | UnaryExpr AssignOp Expression

   85 AssignOp: T_Equal
   86         | T_AddAssign
   87         | T_SubAssign
   88         | T_MulAssign
   89         | T_DivAssign


Terminals, with rules where they appear

$end (0) 0
error (256)
T_Void (258) 16
T_Bool (259) 18
T_Int (260) 15
T_Float (261) 17
T_Uint (262)
T_Struct (263)
T_Bvec2 (264)
T_Bvec3 (265)
T_Bvec4 (266)
T_Ivec2 (267)
T_Ivec3 (268)
T_Ivec4 (269)
T_Uvec2 (270)
T_Uvec3 (271)
T_Uvec4 (272)
T_Vec2 (273) 19
T_Vec3 (274) 20
T_Vec4 (275) 21
T_Mat2 (276) 22
T_Mat3 (277) 23
T_Mat4 (278) 24
T_While (279) 49
T_For (280) 50
T_If (281) 40 41
T_Else (282) 40
T_Return (283) 47 48
T_Break (284) 45
T_Continue (285) 46
T_Do (286)
T_Switch (287) 42
T_Case (288) 43
T_Default (289) 44
T_In (290)
T_Out (291)
T_Inout (292)
T_Const (293)
T_Uniform (294)
T_Layout (295)
T_LeftParen (296) 8 9 40 41 42 49 50 55
T_RightParen (297) 8 9 40 41 42 49 50 55
T_LeftBracket (298)
T_RightBracket (299)
T_LeftBrace (300) 25 26 42
T_RightBrace (301) 25 26 42
T_Dot (302) 59
T_Comma (303) 11
T_Colon (304) 43 44
T_Semicolon (305) 6 7 31 32 33 45 46 47 48 50
T_LessEqual (306) 75
T_GreaterEqual (307) 74
T_EqOp (308) 77
T_NeqOp (309) 78
T_And (310) 80
T_Or (311) 82
T_Plus (312) 63 69
T_Star (313) 66
T_MulAssign (314) 88
T_DivAssign (315) 89
T_AddAssign (316) 86
T_SubAssign (317) 87
T_Equal (318) 13 85
T_LeftAngle (319) 72
T_RightAngle (320) 73
T_Dash (321) 64 70
T_Slash (322) 67
T_Inc (323) 57 61
T_Dec (324) 58 62
T_Identifier (325) 8 9 12 13 51
T_IntConstant (326) 52
T_FloatConstant (327) 14 53
T_BoolConstant (328) 54
T_FieldSelection (329) 59
LOWEST (330)
LOWER_THAN_ELSE (331)
T_NeqOP (332)


Nonterminals, with rules where they appear

$accept (78)
    on left: 0
Program (79)
    on left: 1, on right: 0
DeclList (80)
    on left: 2 3, on right: 1 2
Decl (81)
    on left: 4 5, on right: 2 3
Declaration (82)
    on left: 6 7, on right: 4
FuncDecl (83)
    on left: 8 9, on right: 5 6
ParameterList (84)
    on left: 10 11, on right: 9 11
SingleDecl (85)
    on left: 12 13, on right: 7 10 11 32
Initializer (86)
    on left: 14, on right: 13
TypeDecl (87)
    on left: 15 16 17 18 19 20 21 22 23 24, on right: 8 9 12 13
CompoundStatement (88)
    on left: 25 26, on right: 5 29
StatementList (89)
    on left: 27 28, on right: 26 28 42
Statement (90)
    on left: 29 30, on right: 27 28 40 41 43 44 49 50
SingleStatement (91)
    on left: 31 32 33 34 35 36 37 38 39, on right: 30
SelectionStmt (92)
    on left: 40 41, on right: 34
SwitchStmt (93)
    on left: 42, on right: 35
CaseStmt (94)
    on left: 43 44, on right: 36
JumpStmt (95)
    on left: 45 46 47 48, on right: 37
WhileStmt (96)
    on left: 49, on right: 38
ForStmt (97)
    on left: 50, on right: 39
PrimaryExpr (98)
    on left: 51 52 53 54 55, on right: 56
PostfixExpr (99)
    on left: 56 57 58 59, on right: 57 58 59 60
UnaryExpr (100)
    on left: 60 61 62 63 64, on right: 61 62 63 64 65 66 67 84
MultiExpr (101)
    on left: 65 66 67, on right: 66 67 68 69 70
AdditionExpr (102)
    on left: 68 69 70, on right: 69 70 71 72 73 74 75
RelationExpr (103)
    on left: 71 72 73 74 75, on right: 72 73 74 75 76 77 78
EqualityExpr (104)
    on left: 76 77 78, on right: 77 78 79 80
LogicAndExpr (105)
    on left: 79 80, on right: 80 81 82
LogicOrExpr (106)
    on left: 81 82, on right: 82 83
Expression (107)
    on left: 83 84, on right: 33 40 41 42 43 48 49 50 55 84
AssignOp (108)
    on left: 85 86 87 88 89, on right: 84


state 0

    0 $accept: . Program $end

    T_Void   shift, and go to state 1
    T_Bool   shift, and go to state 2
    T_Int    shift, and go to state 3
    T_Float  shift, and go to state 4
    T_Vec2   shift, and go to state 5
    T_Vec3   shift, and go to state 6
    T_Vec4   shift, and go to state 7
    T_Mat2   shift, and go to state 8
    T_Mat3   shift, and go to state 9
    T_Mat4   shift, and go to state 10

    Program      go to state 11
    DeclList     go to state 12
    Decl         go to state 13
    Declaration  go to state 14
    FuncDecl     go to state 15
    SingleDecl   go to state 16
    TypeDecl     go to state 17


state 1

   16 TypeDecl: T_Void .

    $default  reduce using rule 16 (TypeDecl)


state 2

   18 TypeDecl: T_Bool .

    $default  reduce using rule 18 (TypeDecl)


state 3

   15 TypeDecl: T_Int .

    $default  reduce using rule 15 (TypeDecl)


state 4

   17 TypeDecl: T_Float .

    $default  reduce using rule 17 (TypeDecl)


state 5

   19 TypeDecl: T_Vec2 .

    $default  reduce using rule 19 (TypeDecl)


state 6

   20 TypeDecl: T_Vec3 .

    $default  reduce using rule 20 (TypeDecl)


state 7

   21 TypeDecl: T_Vec4 .

    $default  reduce using rule 21 (TypeDecl)


state 8

   22 TypeDecl: T_Mat2 .

    $default  reduce using rule 22 (TypeDecl)


state 9

   23 TypeDecl: T_Mat3 .

    $default  reduce using rule 23 (TypeDecl)


state 10

   24 TypeDecl: T_Mat4 .

    $default  reduce using rule 24 (TypeDecl)


state 11

    0 $accept: Program . $end

    $end  shift, and go to state 18


state 12

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void   shift, and go to state 1
    T_Bool   shift, and go to state 2
    T_Int    shift, and go to state 3
    T_Float  shift, and go to state 4
    T_Vec2   shift, and go to state 5
    T_Vec3   shift, and go to state 6
    T_Vec4   shift, and go to state 7
    T_Mat2   shift, and go to state 8
    T_Mat3   shift, and go to state 9
    T_Mat4   shift, and go to state 10

    $default  reduce using rule 1 (Program)

    Decl         go to state 19
    Declaration  go to state 14
    FuncDecl     go to state 15
    SingleDecl   go to state 16
    TypeDecl     go to state 17


state 13

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


state 14

    4 Decl: Declaration .

    $default  reduce using rule 4 (Decl)


state 15

    5 Decl: FuncDecl . CompoundStatement
    6 Declaration: FuncDecl . T_Semicolon

    T_LeftBrace  shift, and go to state 20
    T_Semicolon  shift, and go to state 21

    CompoundStatement  go to state 22


state 16

    7 Declaration: SingleDecl . T_Semicolon

    T_Semicolon  shift, and go to state 23


state 17

    8 FuncDecl: TypeDecl . T_Identifier T_LeftParen T_RightParen
    9         | TypeDecl . T_Identifier T_LeftParen ParameterList T_RightParen
   12 SingleDecl: TypeDecl . T_Identifier
   13           | TypeDecl . T_Identifier T_Equal Initializer

    T_Identifier  shift, and go to state 24


state 18

    0 $accept: Program $end .

    $default  accept


state 19

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


state 20

   25 CompoundStatement: T_LeftBrace . T_RightBrace
   26                  | T_LeftBrace . StatementList T_RightBrace

    T_Void           shift, and go to state 1
    T_Bool           shift, and go to state 2
    T_Int            shift, and go to state 3
    T_Float          shift, and go to state 4
    T_Vec2           shift, and go to state 5
    T_Vec3           shift, and go to state 6
    T_Vec4           shift, and go to state 7
    T_Mat2           shift, and go to state 8
    T_Mat3           shift, and go to state 9
    T_Mat4           shift, and go to state 10
    T_While          shift, and go to state 25
    T_For            shift, and go to state 26
    T_If             shift, and go to state 27
    T_Return         shift, and go to state 28
    T_Break          shift, and go to state 29
    T_Continue       shift, and go to state 30
    T_Switch         shift, and go to state 31
    T_Case           shift, and go to state 32
    T_Default        shift, and go to state 33
    T_LeftParen      shift, and go to state 34
    T_LeftBrace      shift, and go to state 20
    T_RightBrace     shift, and go to state 35
    T_Semicolon      shift, and go to state 36
    T_Plus           shift, and go to state 37
    T_Dash           shift, and go to state 38
    T_Inc            shift, and go to state 39
    T_Dec            shift, and go to state 40
    T_Identifier     shift, and go to state 41
    T_IntConstant    shift, and go to state 42
    T_FloatConstant  shift, and go to state 43
    T_BoolConstant   shift, and go to state 44

    SingleDecl         go to state 45
    TypeDecl           go to state 46
    CompoundStatement  go to state 47
    StatementList      go to state 48
    Statement          go to state 49
    SingleStatement    go to state 50
    SelectionStmt      go to state 51
    SwitchStmt         go to state 52
    CaseStmt           go to state 53
    JumpStmt           go to state 54
    WhileStmt          go to state 55
    ForStmt            go to state 56
    PrimaryExpr        go to state 57
    PostfixExpr        go to state 58
    UnaryExpr          go to state 59
    MultiExpr          go to state 60
    AdditionExpr       go to state 61
    RelationExpr       go to state 62
    EqualityExpr       go to state 63
    LogicAndExpr       go to state 64
    LogicOrExpr        go to state 65
    Expression         go to state 66


state 21

    6 Declaration: FuncDecl T_Semicolon .

    $default  reduce using rule 6 (Declaration)


state 22

    5 Decl: FuncDecl CompoundStatement .

    $default  reduce using rule 5 (Decl)


state 23

    7 Declaration: SingleDecl T_Semicolon .

    $default  reduce using rule 7 (Declaration)


state 24

    8 FuncDecl: TypeDecl T_Identifier . T_LeftParen T_RightParen
    9         | TypeDecl T_Identifier . T_LeftParen ParameterList T_RightParen
   12 SingleDecl: TypeDecl T_Identifier .
   13           | TypeDecl T_Identifier . T_Equal Initializer

    T_LeftParen  shift, and go to state 67
    T_Equal      shift, and go to state 68

    $default  reduce using rule 12 (SingleDecl)


state 25

   49 WhileStmt: T_While . T_LeftParen Expression T_RightParen Statement

    T_LeftParen  shift, and go to state 69


state 26

   50 ForStmt: T_For . T_LeftParen Expression T_Semicolon Expression T_Semicolon Expression T_RightParen Statement

    T_LeftParen  shift, and go to state 70


state 27

   40 SelectionStmt: T_If . T_LeftParen Expression T_RightParen Statement T_Else Statement
   41              | T_If . T_LeftParen Expression T_RightParen Statement

    T_LeftParen  shift, and go to state 71


state 28

   47 JumpStmt: T_Return . T_Semicolon
   48         | T_Return . Expression T_Semicolon

    T_LeftParen      shift, and go to state 34
    T_Semicolon      shift, and go to state 72
    T_Plus           shift, and go to state 37
    T_Dash           shift, and go to state 38
    T_Inc            shift, and go to state 39
    T_Dec            shift, and go to state 40
    T_Identifier     shift, and go to state 41
    T_IntConstant    shift, and go to state 42
    T_FloatConstant  shift, and go to state 43
    T_BoolConstant   shift, and go to state 44

    PrimaryExpr   go to state 57
    PostfixExpr   go to state 58
    UnaryExpr     go to state 59
    MultiExpr     go to state 60
    AdditionExpr  go to state 61
    RelationExpr  go to state 62
    EqualityExpr  go to state 63
    LogicAndExpr  go to state 64
    LogicOrExpr   go to state 65
    Expression    go to state 73


state 29

   45 JumpStmt: T_Break . T_Semicolon

    T_Semicolon  shift, and go to state 74


state 30

   46 JumpStmt: T_Continue . T_Semicolon

    T_Semicolon  shift, and go to state 75


state 31

   42 SwitchStmt: T_Switch . T_LeftParen Expression T_RightParen T_LeftBrace StatementList T_RightBrace

    T_LeftParen  shift, and go to state 76


state 32

   43 CaseStmt: T_Case . Expression T_Colon Statement

    T_LeftParen      shift, and go to state 34
    T_Plus           shift, and go to state 37
    T_Dash           shift, and go to state 38
    T_Inc            shift, and go to state 39
    T_Dec            shift, and go to state 40
    T_Identifier     shift, and go to state 41
    T_IntConstant    shift, and go to state 42
    T_FloatConstant  shift, and go to state 43
    T_BoolConstant   shift, and go to state 44

    PrimaryExpr   go to state 57
    PostfixExpr   go to state 58
    UnaryExpr     go to state 59
    MultiExpr     go to state 60
    AdditionExpr  go to state 61
    RelationExpr  go to state 62
    EqualityExpr  go to state 63
    LogicAndExpr  go to state 64
    LogicOrExpr   go to state 65
    Expression    go to state 77


state 33

   44 CaseStmt: T_Default . T_Colon Statement

    T_Colon  shift, and go to state 78


state 34

   55 PrimaryExpr: T_LeftParen . Expression T_RightParen

    T_LeftParen      shift, and go to state 34
    T_Plus           shift, and go to state 37
    T_Dash           shift, and go to state 38
    T_Inc            shift, and go to state 39
    T_Dec            shift, and go to state 40
    T_Identifier     shift, and go to state 41
    T_IntConstant    shift, and go to state 42
    T_FloatConstant  shift, and go to state 43
    T_BoolConstant   shift, and go to state 44

    PrimaryExpr   go to state 57
    PostfixExpr   go to state 58
    UnaryExpr     go to state 59
    MultiExpr     go to state 60
    AdditionExpr  go to state 61
    RelationExpr  go to state 62
    EqualityExpr  go to state 63
    LogicAndExpr  go to state 64
    LogicOrExpr   go to state 65
    Expression    go to state 79


state 35

   25 CompoundStatement: T_LeftBrace T_RightBrace .

    $default  reduce using rule 25 (CompoundStatement)


state 36

   31 SingleStatement: T_Semicolon .

    $default  reduce using rule 31 (SingleStatement)


state 37

   63 UnaryExpr: T_Plus . UnaryExpr

    T_LeftParen      shift, and go to state 34
    T_Plus           shift, and go to state 37
    T_Dash           shift, and go to state 38
    T_Inc            shift, and go to state 39
    T_Dec            shift, and go to state 40
    T_Identifier     shift, and go to state 41
    T_IntConstant    shift, and go to state 42
    T_FloatConstant  shift, and go to state 43
    T_BoolConstant   shift, and go to state 44

    PrimaryExpr  go to state 57
    PostfixExpr  go to state 58
    UnaryExpr    go to state 80


state 38

   64 UnaryExpr: T_Dash . UnaryExpr

    T_LeftParen      shift, and go to state 34
    T_Plus           shift, and go to state 37
    T_Dash           shift, and go to state 38
    T_Inc            shift, and go to state 39
    T_Dec            shift, and go to state 40
    T_Identifier     shift, and go to state 41
    T_IntConstant    shift, and go to state 42
    T_FloatConstant  shift, and go to state 43
    T_BoolConstant   shift, and go to state 44

    PrimaryExpr  go to state 57
    PostfixExpr  go to state 58
    UnaryExpr    go to state 81


state 39

   61 UnaryExpr: T_Inc . UnaryExpr

    T_LeftParen      shift, and go to state 34
    T_Plus           shift, and go to state 37
    T_Dash           shift, and go to state 38
    T_Inc            shift, and go to state 39
    T_Dec            shift, and go to state 40
    T_Identifier     shift, and go to state 41
    T_IntConstant    shift, and go to state 42
    T_FloatConstant  shift, and go to state 43
    T_BoolConstant   shift, and go to state 44

    PrimaryExpr  go to state 57
    PostfixExpr  go to state 58
    UnaryExpr    go to state 82


state 40

   62 UnaryExpr: T_Dec . UnaryExpr

    T_LeftParen      shift, and go to state 34
    T_Plus           shift, and go to state 37
    T_Dash           shift, and go to state 38
    T_Inc            shift, and go to state 39
    T_Dec            shift, and go to state 40
    T_Identifier     shift, and go to state 41
    T_IntConstant    shift, and go to state 42
    T_FloatConstant  shift, and go to state 43
    T_BoolConstant   shift, and go to state 44

    PrimaryExpr  go to state 57
    PostfixExpr  go to state 58
    UnaryExpr    go to state 83


state 41

   51 PrimaryExpr: T_Identifier .

    $default  reduce using rule 51 (PrimaryExpr)


state 42

   52 PrimaryExpr: T_IntConstant .

    $default  reduce using rule 52 (PrimaryExpr)


state 43

   53 PrimaryExpr: T_FloatConstant .

    $default  reduce using rule 53 (PrimaryExpr)


state 44

   54 PrimaryExpr: T_BoolConstant .

    $default  reduce using rule 54 (PrimaryExpr)


state 45

   32 SingleStatement: SingleDecl . T_Semicolon

    T_Semicolon  shift, and go to state 84


state 46

   12 SingleDecl: TypeDecl . T_Identifier
   13           | TypeDecl . T_Identifier T_Equal Initializer

    T_Identifier  shift, and go to state 85


state 47

   29 Statement: CompoundStatement .

    $default  reduce using rule 29 (Statement)


state 48

   26 CompoundStatement: T_LeftBrace StatementList . T_RightBrace
   28 StatementList: StatementList . Statement

    T_Void           shift, and go to state 1
    T_Bool           shift, and go to state 2
    T_Int            shift, and go to state 3
    T_Float          shift, and go to state 4
    T_Vec2           shift, and go to state 5
    T_Vec3           shift, and go to state 6
    T_Vec4           shift, and go to state 7
    T_Mat2           shift, and go to state 8
    T_Mat3           shift, and go to state 9
    T_Mat4           shift, and go to state 10
    T_While          shift, and go to state 25
    T_For            shift, and go to state 26
    T_If             shift, and go to state 27
    T_Return         shift, and go to state 28
    T_Break          shift, and go to state 29
    T_Continue       shift, and go to state 30
    T_Switch         shift, and go to state 31
    T_Case           shift, and go to state 32
    T_Default        shift, and go to state 33
    T_LeftParen      shift, and go to state 34
    T_LeftBrace      shift, and go to state 20
    T_RightBrace     shift, and go to state 86
    T_Semicolon      shift, and go to state 36
    T_Plus           shift, and go to state 37
    T_Dash           shift, and go to state 38
    T_Inc            shift, and go to state 39
    T_Dec            shift, and go to state 40
    T_Identifier     shift, and go to state 41
    T_IntConstant    shift, and go to state 42
    T_FloatConstant  shift, and go to state 43
    T_BoolConstant   shift, and go to state 44

    SingleDecl         go to state 45
    TypeDecl           go to state 46
    CompoundStatement  go to state 47
    Statement          go to state 87
    SingleStatement    go to state 50
    SelectionStmt      go to state 51
    SwitchStmt         go to state 52
    CaseStmt           go to state 53
    JumpStmt           go to state 54
    WhileStmt          go to state 55
    ForStmt            go to state 56
    PrimaryExpr        go to state 57
    PostfixExpr        go to state 58
    UnaryExpr          go to state 59
    MultiExpr          go to state 60
    AdditionExpr       go to state 61
    RelationExpr       go to state 62
    EqualityExpr       go to state 63
    LogicAndExpr       go to state 64
    LogicOrExpr        go to state 65
    Expression         go to state 66


state 49

   27 StatementList: Statement .

    $default  reduce using rule 27 (StatementList)


state 50

   30 Statement: SingleStatement .

    $default  reduce using rule 30 (Statement)


state 51

   34 SingleStatement: SelectionStmt .

    $default  reduce using rule 34 (SingleStatement)


state 52

   35 SingleStatement: SwitchStmt .

    $default  reduce using rule 35 (SingleStatement)


state 53

   36 SingleStatement: CaseStmt .

    $default  reduce using rule 36 (SingleStatement)


state 54

   37 SingleStatement: JumpStmt .

    $default  reduce using rule 37 (SingleStatement)


state 55

   38 SingleStatement: WhileStmt .

    $default  reduce using rule 38 (SingleStatement)


state 56

   39 SingleStatement: ForStmt .

    $default  reduce using rule 39 (SingleStatement)


state 57

   56 PostfixExpr: PrimaryExpr .

    $default  reduce using rule 56 (PostfixExpr)


state 58

   57 PostfixExpr: PostfixExpr . T_Inc
   58            | PostfixExpr . T_Dec
   59            | PostfixExpr . T_Dot T_FieldSelection
   60 UnaryExpr: PostfixExpr .

    T_Dot  shift, and go to state 88
    T_Inc  shift, and go to state 89
    T_Dec  shift, and go to state 90

    $default  reduce using rule 60 (UnaryExpr)


state 59

   65 MultiExpr: UnaryExpr .
   84 Expression: UnaryExpr . AssignOp Expression

    T_MulAssign  shift, and go to state 91
    T_DivAssign  shift, and go to state 92
    T_AddAssign  shift, and go to state 93
    T_SubAssign  shift, and go to state 94
    T_Equal      shift, and go to state 95

    $default  reduce using rule 65 (MultiExpr)

    AssignOp  go to state 96


state 60

   66 MultiExpr: MultiExpr . T_Star UnaryExpr
   67          | MultiExpr . T_Slash UnaryExpr
   68 AdditionExpr: MultiExpr .

    T_Star   shift, and go to state 97
    T_Slash  shift, and go to state 98

    $default  reduce using rule 68 (AdditionExpr)


state 61

   69 AdditionExpr: AdditionExpr . T_Plus MultiExpr
   70             | AdditionExpr . T_Dash MultiExpr
   71 RelationExpr: AdditionExpr .

    T_Plus  shift, and go to state 99
    T_Dash  shift, and go to state 100

    $default  reduce using rule 71 (RelationExpr)


state 62

   72 RelationExpr: RelationExpr . T_LeftAngle AdditionExpr
   73             | RelationExpr . T_RightAngle AdditionExpr
   74             | RelationExpr . T_GreaterEqual AdditionExpr
   75             | RelationExpr . T_LessEqual AdditionExpr
   76 EqualityExpr: RelationExpr .

    T_LessEqual     shift, and go to state 101
    T_GreaterEqual  shift, and go to state 102
    T_LeftAngle     shift, and go to state 103
    T_RightAngle    shift, and go to state 104

    $default  reduce using rule 76 (EqualityExpr)


state 63

   77 EqualityExpr: EqualityExpr . T_EqOp RelationExpr
   78             | EqualityExpr . T_NeqOp RelationExpr
   79 LogicAndExpr: EqualityExpr .

    T_EqOp   shift, and go to state 105
    T_NeqOp  shift, and go to state 106

    $default  reduce using rule 79 (LogicAndExpr)


state 64

   80 LogicAndExpr: LogicAndExpr . T_And EqualityExpr
   81 LogicOrExpr: LogicAndExpr .

    T_And  shift, and go to state 107

    $default  reduce using rule 81 (LogicOrExpr)


state 65

   82 LogicOrExpr: LogicOrExpr . T_Or LogicAndExpr
   83 Expression: LogicOrExpr .

    T_Or  shift, and go to state 108

    $default  reduce using rule 83 (Expression)


state 66

   33 SingleStatement: Expression . T_Semicolon

    T_Semicolon  shift, and go to state 109


state 67

    8 FuncDecl: TypeDecl T_Identifier T_LeftParen . T_RightParen
    9         | TypeDecl T_Identifier T_LeftParen . ParameterList T_RightParen

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Float       shift, and go to state 4
    T_Vec2        shift, and go to state 5
    T_Vec3        shift, and go to state 6
    T_Vec4        shift, and go to state 7
    T_Mat2        shift, and go to state 8
    T_Mat3        shift, and go to state 9
    T_Mat4        shift, and go to state 10
    T_RightParen  shift, and go to state 110

    ParameterList  go to state 111
    SingleDecl     go to state 112
    TypeDecl       go to state 46


state 68

   13 SingleDecl: TypeDecl T_Identifier T_Equal . Initializer

    T_FloatConstant  shift, and go to state 113

    Initializer  go to state 114


state 69

   49 WhileStmt: T_While T_LeftParen . Expression T_RightParen Statement

    T_LeftParen      shift, and go to state 34
    T_Plus           shift, and go to state 37
    T_Dash           shift, and go to state 38
    T_Inc            shift, and go to state 39
    T_Dec            shift, and go to state 40
    T_Identifier     shift, and go to state 41
    T_IntConstant    shift, and go to state 42
    T_FloatConstant  shift, and go to state 43
    T_BoolConstant   shift, and go to state 44

    PrimaryExpr   go to state 57
    PostfixExpr   go to state 58
    UnaryExpr     go to state 59
    MultiExpr     go to state 60
    AdditionExpr  go to state 61
    RelationExpr  go to state 62
    EqualityExpr  go to state 63
    LogicAndExpr  go to state 64
    LogicOrExpr   go to state 65
    Expression    go to state 115


state 70

   50 ForStmt: T_For T_LeftParen . Expression T_Semicolon Expression T_Semicolon Expression T_RightParen Statement

    T_LeftParen      shift, and go to state 34
    T_Plus           shift, and go to state 37
    T_Dash           shift, and go to state 38
    T_Inc            shift, and go to state 39
    T_Dec            shift, and go to state 40
    T_Identifier     shift, and go to state 41
    T_IntConstant    shift, and go to state 42
    T_FloatConstant  shift, and go to state 43
    T_BoolConstant   shift, and go to state 44

    PrimaryExpr   go to state 57
    PostfixExpr   go to state 58
    UnaryExpr     go to state 59
    MultiExpr     go to state 60
    AdditionExpr  go to state 61
    RelationExpr  go to state 62
    EqualityExpr  go to state 63
    LogicAndExpr  go to state 64
    LogicOrExpr   go to state 65
    Expression    go to state 116


state 71

   40 SelectionStmt: T_If T_LeftParen . Expression T_RightParen Statement T_Else Statement
   41              | T_If T_LeftParen . Expression T_RightParen Statement

    T_LeftParen      shift, and go to state 34
    T_Plus           shift, and go to state 37
    T_Dash           shift, and go to state 38
    T_Inc            shift, and go to state 39
    T_Dec            shift, and go to state 40
    T_Identifier     shift, and go to state 41
    T_IntConstant    shift, and go to state 42
    T_FloatConstant  shift, and go to state 43
    T_BoolConstant   shift, and go to state 44

    PrimaryExpr   go to state 57
    PostfixExpr   go to state 58
    UnaryExpr     go to state 59
    MultiExpr     go to state 60
    AdditionExpr  go to state 61
    RelationExpr  go to state 62
    EqualityExpr  go to state 63
    LogicAndExpr  go to state 64
    LogicOrExpr   go to state 65
    Expression    go to state 117


state 72

   47 JumpStmt: T_Return T_Semicolon .

    $default  reduce using rule 47 (JumpStmt)


state 73

   48 JumpStmt: T_Return Expression . T_Semicolon

    T_Semicolon  shift, and go to state 118


state 74

   45 JumpStmt: T_Break T_Semicolon .

    $default  reduce using rule 45 (JumpStmt)


state 75

   46 JumpStmt: T_Continue T_Semicolon .

    $default  reduce using rule 46 (JumpStmt)


state 76

   42 SwitchStmt: T_Switch T_LeftParen . Expression T_RightParen T_LeftBrace StatementList T_RightBrace

    T_LeftParen      shift, and go to state 34
    T_Plus           shift, and go to state 37
    T_Dash           shift, and go to state 38
    T_Inc            shift, and go to state 39
    T_Dec            shift, and go to state 40
    T_Identifier     shift, and go to state 41
    T_IntConstant    shift, and go to state 42
    T_FloatConstant  shift, and go to state 43
    T_BoolConstant   shift, and go to state 44

    PrimaryExpr   go to state 57
    PostfixExpr   go to state 58
    UnaryExpr     go to state 59
    MultiExpr     go to state 60
    AdditionExpr  go to state 61
    RelationExpr  go to state 62
    EqualityExpr  go to state 63
    LogicAndExpr  go to state 64
    LogicOrExpr   go to state 65
    Expression    go to state 119


state 77

   43 CaseStmt: T_Case Expression . T_Colon Statement

    T_Colon  shift, and go to state 120


state 78

   44 CaseStmt: T_Default T_Colon . Statement

    T_Void           shift, and go to state 1
    T_Bool           shift, and go to state 2
    T_Int            shift, and go to state 3
    T_Float          shift, and go to state 4
    T_Vec2           shift, and go to state 5
    T_Vec3           shift, and go to state 6
    T_Vec4           shift, and go to state 7
    T_Mat2           shift, and go to state 8
    T_Mat3           shift, and go to state 9
    T_Mat4           shift, and go to state 10
    T_While          shift, and go to state 25
    T_For            shift, and go to state 26
    T_If             shift, and go to state 27
    T_Return         shift, and go to state 28
    T_Break          shift, and go to state 29
    T_Continue       shift, and go to state 30
    T_Switch         shift, and go to state 31
    T_Case           shift, and go to state 32
    T_Default        shift, and go to state 33
    T_LeftParen      shift, and go to state 34
    T_LeftBrace      shift, and go to state 20
    T_Semicolon      shift, and go to state 36
    T_Plus           shift, and go to state 37
    T_Dash           shift, and go to state 38
    T_Inc            shift, and go to state 39
    T_Dec            shift, and go to state 40
    T_Identifier     shift, and go to state 41
    T_IntConstant    shift, and go to state 42
    T_FloatConstant  shift, and go to state 43
    T_BoolConstant   shift, and go to state 44

    SingleDecl         go to state 45
    TypeDecl           go to state 46
    CompoundStatement  go to state 47
    Statement          go to state 121
    SingleStatement    go to state 50
    SelectionStmt      go to state 51
    SwitchStmt         go to state 52
    CaseStmt           go to state 53
    JumpStmt           go to state 54
    WhileStmt          go to state 55
    ForStmt            go to state 56
    PrimaryExpr        go to state 57
    PostfixExpr        go to state 58
    UnaryExpr          go to state 59
    MultiExpr          go to state 60
    AdditionExpr       go to state 61
    RelationExpr       go to state 62
    EqualityExpr       go to state 63
    LogicAndExpr       go to state 64
    LogicOrExpr        go to state 65
    Expression         go to state 66


state 79

   55 PrimaryExpr: T_LeftParen Expression . T_RightParen

    T_RightParen  shift, and go to state 122


state 80

   63 UnaryExpr: T_Plus UnaryExpr .
